@@ -43,6 +43,19 @@
 	text-align: center;
 }
 
+.ep_search_tool {
+	white-space: nowrap;
+}
+.ep_search_tool img {
+	vertical-align: -2px;
+	padding-left: 0.5em;
+}
+.ep_search_tool a {
+	text-decoration: none;
+	color: #888;
+}
+
+
 .ep_search_feed {
 	white-space: nowrap;
 }
