@@ -7081,3 +7081,8 @@ PACKAGE: 2.2.99.2
 2008-03-19 cjg
  * Added strlen method to EPrints Script
  * Added <epc:foreach> tool to EPC
+
+2008-03-19 cjg
+ * Added tool plugin feature (like feeds)
+ * Made batch-edit a tool.
+
